--- a/10/styles/style.css
+++ b/10/styles/style.css
@@ -43,14 +43,25 @@ body {
   overflow: hidden;
 }
 
+.img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 
 .main-container {
   flex-grow: 1;
 }
 
 /* Navigation */
+.main-header {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
   font-weight: 700;
   font-size: 20px;
@@ -59,12 +70,12 @@ body {
 
 .navigation_list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 339px;
   padding: 0;
-  margin-left: 30px;
-  margin-right: auto;
+  margin: 0 auto 0 30px;
   text-decoration: none;
   list-style: none;
 }
@@ -74,24 +85,38 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 0 70px 0 auto;
-  max-width: 320px;
   height: 64px;
   max-height: 64px;
   text-decoration: none;
   color: #000000;
 }
 
-.navigation-text__link,
-.navigation-icons__link {
+.navigation-text__link {
+  display: block;
+  padding: 20px 16px;
   color: #000000;
   text-decoration: none;
 }
 
-/*.navigation-icons__search {
+.navigation-icons__link {
+  display: flex;
+  justify-content: space-between;
+  min-width: 20px;
+  min-height: 20px;
+  padding: 22px 12px;
+  color: #000000;
+  text-decoration: none;
+}
+
+/*.navigation-icons__search { Спросить на созвоне!
+  padding: 22px 12px;
+  display: flex;
   background-image: url("../images/header-icons/search.svg");
   background-repeat: no-repeat;
   width: 44px;
   height: 64px;
+  align-items: center;
+  justify-content: center;
 }*/
 
 .navigation-icons__items__heart {
@@ -156,10 +181,24 @@ body {
   line-height: 36px;
 }
 
+.advantages_head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1200px;
+  height: 123px;
+  padding: 69px 0;
+  gap: 25px;
+}
+
 .advantages__text {
+  width: 620px;
+  height: auto;
   font-weight: 700;
   font-size: 30px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .advantages__description {
@@ -167,9 +206,11 @@ body {
   font-weight: 400;
   font-size: 22px;
   color: #333333;
+  margin: 0;
 }
 
 .advatages_item__text {
+  margin: 0;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -204,6 +245,7 @@ body {
   background: rgba(131, 179, 211, 0.12);
   text-transform: uppercase;
   list-style: none;
+  gap: 30px;
 }
 
 .advantages_item-photo {
@@ -216,11 +258,6 @@ body {
   background: hsl(204, 48%, 67%);
 }
 
-.advantages_item_photo__city {
-  display: flex;
-  width: 100%;
-}
-
 .advantages_photo_text {
   display: flex;
   flex-direction: column;
@@ -229,7 +266,8 @@ body {
   padding: 103px 85px;
   width: 230px;
   height: 179px;
-  background: var(--background-basic-3, hsl(204, 48%, 67%));
+  background-color: hsl(204, 48%, 67%);
+  gap: 30px;
 }
 
 .advantages_item__description {
@@ -237,6 +275,9 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-transform: none;
+  margin: 0;
+  gap: 30px;
+  color: #333333;
 }
 
 .advantages_item__road {
@@ -256,6 +297,8 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-transform: none;
+  margin: 0;
+  color: #ffffff;
 }
 
 /*Service*/
@@ -276,11 +319,13 @@ body {
 }
 
 .service_text {
+  width: 505px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   margin: 0;
   padding: 0;
+  text-transform: uppercase;
 }
 
 .service_description {
@@ -308,7 +353,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 30px;
-  width: 400px;
+  width: 100%;
   height: 230px;
   list-style: none;
   padding: 80px 85px;
@@ -332,6 +377,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .service_item__description {
@@ -341,15 +387,21 @@ body {
   line-height: 21px;
   text-transform: none;
   color: #333333;
+  margin: 0;
 }
 
 .interest {
-  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 96px 304px;
   color: #000000;
   background-color: #ffffff;
 }
 
 .interest_text {
+  margin: 0 0 20px 0;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -357,10 +409,33 @@ body {
 }
 
 .interest_description {
+  margin: 0 0 54px;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
   color: #333333;
+}
+
+.interest_link {
+  display: inline-flex;
+  padding: 8px 50px;
+  justify-content: center;
+  align-items: center;
+  width: 276px;
+  height: 36px;
+  border-radius: 4px;
+  background: #756157;
+}
+
+.interest a {
+  text-decoration: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
 }
 
 /*Foorter*/
@@ -419,6 +494,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 96px 258px 104px 258px;
 }
 
 .main-follow a {
@@ -430,6 +506,7 @@ body {
 }
 
 .follow__text-catalog {
+  margin: 0;
   text-transform: uppercase;
 }
 
@@ -446,13 +523,28 @@ body {
   line-height: 26px;
 }
 
+.mailing-form-line {
+  width: 412px;
+  height: 28px;
+  padding: 12px 20px;
+  align-items: center;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  background: var(--basic-light, #f2f2f2);
+  font-size: 18px;
+  font-family: "PT Sans", sans-serif;
+  line-height: 24px;
+}
+
 .mailing-form-button {
   font-family: "PT Sans", sans-serif;
   font-style: normal;
   color: #ffffff;
+  padding: 8px 50px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
+  border: none;
   text-transform: uppercase;
   background: hsl(204, 48%, 67%);
   border-radius: 0 4px 4px 0;
@@ -481,19 +573,22 @@ body {
 
 .social {
   display: flex;
-  justify-content: center;
-  height: 120px;
-  width: 1200px;
+  height: auto;
   padding: 40px 70px 30px 70px;
+  align-items: center;
+  justify-content: center;
 }
 
 .social__list {
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-between;
-  width: 200px;
-  padding: 0;
+  justify-content: center;
+  width: 142px;
+  height: 40px;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /*Catalog*/
@@ -501,8 +596,6 @@ body {
   margin: 0 auto;
   text-decoration: none;
   font-style: normal;
-  font-size: 24px;
-  line-height: 28px;
   color: rgba(131, 179, 211, 0.12);
   background-color: #ffffff;
 }
@@ -605,7 +698,6 @@ body {
   margin-right: auto;
 }
 
-
 .filter_swimmingpool .filter_parking .filter_wifi {
   display: flex;
   flex-direction: column;
@@ -615,14 +707,13 @@ body {
 }
 
 .filter-category {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  color: #333333;
-  display: flex;
-  flex-wrap: wrap;
+  padding: 14px 20px;
   width: 292px;
-  height: 49px;
+  font-family: "PT Sans", sans-serif;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
 }
 
 .form-container {
@@ -644,26 +735,45 @@ body {
 }
 
 /*Hotels*/
-
 .hotel-title {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  width: 1060px;
   height: 49px;
-  margin: 50px 70px 40px 70px;
+  margin: 0 0 40px;
 }
 
 .icons {
   display: flex;
   justify-content: space-between;
-  width: 160px;
-  height: 48px;
+  width: auto;
+  height: auto;
   gap: 8px;
   list-style: none;
+  margin: 0;
 }
+
+.icons-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  border: 2px solid #000000;
+  max-width: 24px;
+  max-height: 20px;
+}
+
+/*.icons-list-table {
+  display: flex;
+  background-image: url("../images/catalog/vectors/table.svg");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}*/
 
 .infrastructure_head,
 .house_type {
@@ -704,8 +814,6 @@ body {
   background: #82b3d300;
 }
 
-/*Hotels*/
-
 .hotel {
   width: 1060px;
   color: #000000;
@@ -717,7 +825,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  width: 1060px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -725,91 +832,78 @@ body {
   padding: 0;
 }
 
-.hotel-name {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  color: #333333;
-}
-
 .hotel-card {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  border: 1px solid hsl(0, 0%, 90%);
+  display: grid;
+  grid-template-columns: 140px 140px;
+  grid-template-rows: 212px 1fr;
+  gap: 16px 20px;
+  width: 340px;
+  padding: 19px;
+  border: 1px solid #e6e6e6;
   border-radius: 4px;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  box-sizing: border-box;
+  text-align: start;
+}
+
+.hotel-card-link {
+  text-decoration: none;
+  grid-column: 1/-1;
 }
 
 .hotel-card h3 {
+  margin: 0;
+  display: block;
+  grid-column: -1/1;
   font-size: 24px;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   line-height: 28px;
   color: #000000;
   border: none;
-  margin: 16px 0 16px 0;
   padding: 0;
+  width: 300px;
 }
 
-.hotel-card_value {
-  display: flex;
-  justify-content: space-between;
-  color: #333333;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  font-style: normal;
-}
-
-.rating-area {
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  padding: 0;
-  justify-content: space-between;
+.value {
+  width: 140px;
+  text-align: right;
 }
 
 .rating-number {
-  font-weight: 400;
+  padding: 8px 20px;
   font-size: 16px;
   line-height: 20px;
+  min-width: 140px;
+  text-align: center;
+  color: #333333;
+  background-color: #f2f2f2;
   text-transform: uppercase;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 /* buttons*/
-.hottel-card_button {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  width: 300px;
-  height: 36px;
-}
-
 .hotel-card-follow {
-  display: flex;
-  justify-content: center;
-  font-family: "PT Sans", sans-serif;
+  padding: 8px 20px;
   color: #ffffff;
   background-color: #756157;
-  align-items: center;
-  text-align: center;
   text-transform: uppercase;
   text-decoration: none;
   border-radius: 4px;
   font-size: 16px;
   line-height: 20px;
-  width: 100%;
-  height: auto;
+  font-weight: 700;
+  width: 140px;
+  min-height: 36px;
+  box-sizing: border-box;
 }
 
 .hotel-follow {
-  display: flex;
-  padding: 8px 50px;
-  align-items: center;
+  padding: 8px;
   font-family: "PT Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -819,17 +913,25 @@ body {
   color: #ffffff;
   background-color: #82b3d3;
   border-radius: 4px;
+  text-align: center;
+  border: none;
+  width: 140px;
 }
 
 .hotel-follow__active {
   background-color: #7db54f;
 }
 
+.rating-area {
+  background-image: url("../images/catalog/catalog-stars/4-stars.svg");
+  background-repeat: no-repeat;
+}
+
 .pagination {
   display: flex;
   justify-content: space-between;
   width: 1060px;
-  height: 100%;
+  height: 140px;
   border-radius: 4px;
 }
 
@@ -885,7 +987,13 @@ body {
 }
 
 .follow-catalog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 215px;
   color: #000000;
+  margin: 0;
 }
 
 .page-footer-container-catalog {
@@ -943,26 +1051,31 @@ body {
 
 /*Footer icons*/
 
-.social__link__vk {
-  display: block;
-  min-width: 18px;
-  min-height: 16px;
+.social__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 142px;
+  height: 40px;
+  text-align: center;
+}
+
+.social_link__vk__vector {
+  padding: 0 10px;
+  min-width: 48px;
+  height: 100%;
   background-image: url("../images/icons-footer/icon-vk.svg");
   background-repeat: no-repeat;
 }
 
-.social__link__vk a {
-  display: block;
-}
-
-.social__link__youtube {
-  min-width: 18px;
-  min-height: 16px;
+.social_link__youtube__vector {
+  max-width: 18px;
+  max-height: 16px;
   background-image: url("../images/icons-footer/icon-youtube.svg");
   background-repeat: no-repeat;
 }
 
-.social__link__tg {
+.social_link__tg__vector {
   min-width: 18px;
   min-height: 16px;
   background-image: url("../images/icons-footer/icon-tg.svg");
