Исправляет замечания флексы гриды

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+  padding-left: 70px;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -256,7 +257,7 @@ body {
   align-items: center;
   padding: 103px 85px;
   width: 230px;
-  height: 179px;
+  min-height: 179px;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -285,7 +286,7 @@ body {
   align-items: center;
   padding: 103px 85px;
   width: 230px;
-  height: 179px;
+  min-height: 179px;
   background-color: hsl(204, 48%, 67%);
   gap: 30px;
 }
@@ -374,18 +375,18 @@ body {
   align-items: center;
   gap: 30px;
   width: 100%;
-  height: 230px;
+  min-height: 230px;
   list-style: none;
   padding: 80px 85px;
 }
 
-.service_item__house {
+/*.service_item__house {
   max-width: 75px;
   max-height: 72px;
   width: 75px;
   height: 72px;
   background-image: url("../images/icons-advantages/advantage-home.svg");
-}
+}*/
 
 .service_item__food {
   color: #000000;
@@ -442,7 +443,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 276px;
-  height: 36px;
+  min-height: 36px;
   border-radius: 4px;
   background: #756157;
 }
@@ -463,6 +464,7 @@ body {
 .page-footer-catalog {
   font-family: "PT Sans", sans-serif;
   font-style: normal;
+  box-sizing: border-box;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -471,7 +473,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 415px;
 }
 
 .page-footer-container .page-footer-container-catalog {
@@ -491,20 +492,20 @@ body {
   color: #000000;
   text-decoration: none;
   background-color: #ffffff;
+  margin: 0;
 }
 
 .page-footer-catalog a {
   color: #000000;
   text-decoration: none;
   background-color: #ffffff;
+  margin: 0;
 }
 
 .follow {
   background-image: url("../images/subscribe.jpg");
   color: #ffffff;
   background-color: rgba(131, 179, 211, 0.12);
-  height: 415px;
-  width: 1200px;
   text-align: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -514,6 +515,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 215px;
+  width: 684px;
   padding: 96px 258px 104px 258px;
 }
 
@@ -526,26 +529,42 @@ body {
 }
 
 .follow__text-catalog {
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
   margin: 0;
   text-transform: uppercase;
 }
 
-.follow__text {
+.follow_text {
+  display: flex;
+  flex-direction: column;
+  width: 475px;
+  gap: 20px;
+  margin-bottom: 54px;
+  box-sizing: border-box;
+}
+
+.follow__text_title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .follow__desscription {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
 }
 
 .mailing-form-line {
   width: 412px;
-  height: 28px;
+  min-height: 28px;
   padding: 12px 20px;
   align-items: center;
   border: none;
@@ -569,7 +588,6 @@ body {
   background: hsl(204, 48%, 67%);
   border-radius: 0 4px 4px 0;
   width: 232px;
-  height: 52px;
 }
 
 .footer__contacts {
@@ -593,7 +611,7 @@ body {
 
 .social {
   display: flex;
-  height: 120px;
+  height: 40px;
   padding: 40px 70px 30px 70px;
   align-items: center;
   justify-content: center;
@@ -605,7 +623,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 142px;
-  height: 40px;
+  min-height: 40px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -623,8 +641,8 @@ body {
 .catalog_filter {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: flex-start;
-  align-self: stretch;
   color: #ffffff;
   background-image: url("../images/catalog/fone-filter.jpg");
   background-color: hsl(204, 48%, 67%);
@@ -637,7 +655,7 @@ body {
 
 .catalog_filter h1 {
   width: 494px;
-  height: 88px;
+  min-height: 88px;
   max-height: 88px;
   margin: 0 0 8px 0;
   font-weight: 700;
@@ -663,14 +681,20 @@ body {
   line-height: 21px;
 }
 
+.catalog_filter__form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1060px;
+  margin-top: 40px;
+}
+
 .filter_infrastructure {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-self: stretch;
-  margin-top: 40px;
   padding: 0;
-  height: 317px;
   width: 100%;
 }
 
@@ -678,8 +702,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  margin-top: 40px;
-  width: 100%;
+  gap: 70px;
 }
 
 .infra {
@@ -689,7 +712,6 @@ body {
   padding: 0;
   margin: 0;
   border: none;
-  margin-right: 70px;
 }
 
 .infra p {
@@ -741,7 +763,7 @@ body {
   justify-content: flex-end;
   align-items: flex-end;
   gap: 70px;
-  height: 160px;
+  height: 100%;
 }
 
 .form-container-value {
@@ -749,6 +771,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
+  width: 288px;
 }
 
 .form-container-title {
@@ -769,7 +792,6 @@ body {
 
 .price-from {
   display: flex;
-  width: 143px;
   padding: 12px 20px;
   justify-content: space-between;
   align-items: center;
@@ -778,11 +800,11 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
+  width: 103px;
 }
 
 .price-to {
   display: flex;
-  width: 143px;
   padding: 12px 20px;
   justify-content: space-between;
   align-items: center;
@@ -791,9 +813,10 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
+  width: 103px;
 }
 
-.slider-track-active {
+.slider {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -807,14 +830,18 @@ body {
 
 
 /*Hotels*/
+.catalog {
+  padding: 50px 70px 60px 70px;
+}
+
 .hotel-title {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
   height: 49px;
   margin: 0 0 40px;
+  padding: 50px 70px 60px 70px;
 }
 
 .icons {
@@ -850,13 +877,6 @@ body {
 .infrastructure_head,
 .house_type {
   margin: 0;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-  text-transform: capitalize;
-}
-
-.form-container-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -904,7 +924,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 40px 0;
 }
 
 .hotel-card {
@@ -959,6 +979,7 @@ body {
   text-transform: uppercase;
   border-radius: 4px;
   box-sizing: border-box;
+  margin: 0;
 }
 
 /* buttons*/
@@ -973,7 +994,6 @@ body {
   line-height: 20px;
   font-weight: 700;
   width: 140px;
-  min-height: 36px;
   box-sizing: border-box;
 }
 
@@ -1006,8 +1026,9 @@ body {
   display: flex;
   justify-content: space-between;
   width: 1060px;
-  height: 140px;
   border-radius: 4px;
+  margin-top: 40px;
+
 }
 
 .pagination a {
@@ -1074,17 +1095,34 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 215px;
+  min-height: 215px;
   color: #000000;
   margin: 0;
+  padding: 96px 258px 104px 258px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+}
+
+.follow-catalog__text {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 54px;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
 }
 
 .page-footer-container-catalog {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 215px;
-  padding: 96px 258px 104px 258px;
+  box-sizing: border-box;
 }
 
 .follow__desscription-catalog {
@@ -1092,6 +1130,7 @@ body {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
 }
 
 .mailing-form {
@@ -1100,7 +1139,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 684px;
-  height: 52px;
+  min-height: 52px;
 }
 
 .mailing-form-email {
@@ -1144,24 +1183,30 @@ body {
   text-align: center;
 }
 
+.social_link__vk {
+  display: block;
+  max-height: 28px;
+  max-width: 40px;
+}
+
 .social_link__vk__vector {
-  padding: 0 10px;
-  min-width: 48px;
+  display: block;
+  width: 100%;
   height: 100%;
   background-image: url("../images/icons-footer/icon-vk.svg");
   background-repeat: no-repeat;
 }
 
 .social_link__youtube__vector {
-  max-width: 18px;
-  max-height: 16px;
+  width: 100%;
+  height: 100%;
   background-image: url("../images/icons-footer/icon-youtube.svg");
   background-repeat: no-repeat;
 }
 
 .social_link__tg__vector {
-  min-width: 18px;
-  min-height: 16px;
+  min-width: 100%;
+  min-height: 100%;
   background-image: url("../images/icons-footer/icon-tg.svg");
   background-repeat: no-repeat;
 }
